--- a/cmd/templates/page.html
+++ b/cmd/templates/page.html
@@ -3,7 +3,7 @@
         {{- if not .Error}}
         <table>
             <caption>Clients table sample ({{.PageSize}} out of {{.Total}})</caption>
-            <tr><th bgcolor="#0000E0">Client name</th></tr>
+            <tr><th bgcolor="#E0E0E0">Client name</th></tr>
             {{- range .Data}}
             <tr><td>{{.Name}}</td></tr>
             {{- end}}
